不適切な内容の修正

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div class="HTMLAnimation-meter HTMLAnimation-valueName=test HTMLAnimation-animationSpeed=0.1 HTMLAnimation-animationMaxSpeed=0.3"></div>
     <div class="HTMLAnimation-meter HTMLAnimation-valueName=test HTMLAnimation-animationSpeed=0.1 HTMLAnimation-animationMaxSpeed=0.2"></div>
     <div class="HTMLAnimation-meter HTMLAnimation-valueName=test HTMLAnimation-animationSpeed=0.1 HTMLAnimation-animationMaxSpeed=0.05">
-        <p>gay</p>
+        <div>
+            <p>テスト</p>
+        </div>
     </div>
     <input type="number" value="10" class="HTMLAnimation-value HTMLAnimation-valueName=test">
     <script src="HTMLAnimation.js"></script>
