--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
     <div class="HTMLAnimation-meter HTMLAnimation-valueName=test HTMLAnimation-animationSpeed=0.1 HTMLAnimation-animationMaxSpeed=0.3"></div>
     <div class="HTMLAnimation-meter HTMLAnimation-valueName=test HTMLAnimation-animationSpeed=0.1 HTMLAnimation-animationMaxSpeed=0.2"></div>
-    <div class="HTMLAnimation-meter HTMLAnimation-valueName=test HTMLAnimation-animationSpeed=0.1 HTMLAnimation-animationMaxSpeed=0.05">
-        <div>
+    <div class="HTMLAnimation-meter HTMLAnimation-valueName=test HTMLAnimation-animationSpeed=0.1 HTMLAnimation-animationMaxSpeed=0.1">
+        <p class="HTMLAnimation-view HTMLAnimation-valueName=test HTMLAnimation-animationSpeed=0.1 HTMLAnimation-animationMaxSpeed=0.1"></p>
+        <!-- <div>
             <p>テスト</p>
-        </div>
+        </div> -->
     </div>
-    <input type="number" value="10" class="HTMLAnimation-value HTMLAnimation-valueName=test">
+    <input type="number" value="5" max="15" min="0" class="HTMLAnimation-value HTMLAnimation-valueName=test">
     <script src="HTMLAnimation.js"></script>
 </body>
 </html>
